# factory-train-game

./: .gitignore  Cargo.toml
assets/: lighting.fs
chemic/: Cargo.toml
chemic/src/: lib.rs  matter-and-measurements.md  units.rs
editor/: Cargo.toml
editor/src/: main.rs  mesh.rs
engine/: Cargo.toml
engine/src/: ascii_canvas.rs  lib.rs
engine/src/draw/: draw2d.rs  draw3d.rs  draw_trait_method_doc.md  mod.rs
engine/src/draw/draw2d/: ascii_canvas.rs  builders.rs  mod.rs  rt.rs
fixed_point/: Cargo.toml
fixed_point/src/: lib.rs
info/: notes.tex
src/: chem.md  chem.rs  coords.rs  factory.rs  input.rs  lab.rs  main.rs  ordinals.rs  player.rs  resource.rs  rl_helpers.rs  rlights.rs  units.rs
src/chem/: atom.rs  chem.md  element.rs  fmt.rs  isotopes.html  mod.rs  molecule.rs  orbital.rs  units.rs
src/math/: bounds.rs  mod.rs
src/math/coords/: factory.rs  lab.rs  mod.rs  player.rs  rail.rs
src/region/: factory.rs  lab.rs  mod.rs  rail.rs
src/region/factory/: grid_vis.rs
