[workspace]
members = ["fixed_point", "engine", "chemic"]

[package]
name = "factory-train-game"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = { git = "https://github.com/lolbinarycat/raylib-rs", branch = "raylib-draw-dyn" }
engine = { path = "engine" }
fixed_point = { path = "fixed_point" }
chemic = { path = "chemic" }
arrayvec = "0.7.6"
